# controllers/types/types.go
@@ -148,6 +148,13 @@ var ChaosObjects = fx.Supply(
 			Object: &v1alpha1.BlockChaos{},
 		},
 	},
+	fx.Annotated{
+		Group: "objs",
+		Target: Object{
+			Name:   "awsazchaos",
+			Object: &v1alpha1.AWSAzChaos{},
+		},
+	},
 )
 
 // WebhookObject only used for registration the
