# pkg/dashboard/swaggerdocs/swagger.yaml
@@ -3078,6 +3078,26 @@ definitions:
           +optional
         type: string
     type: object
+  v1alpha1.AWSAzChaosSpec:
+    properties:
+      az:
+        description: AvailabilityZone indicates the Availability zone to be taken
+          down
+        type: string
+      duration:
+        description: |-
+          Duration represents the duration of the chaos action
+          +optional
+        type: string
+      remoteCluster:
+        description: |-
+          RemoteCluster represents the remote cluster where the chaos will be deployed
+          +optional
+        type: string
+      stack:
+        description: AWSRegion defines the region of aws.
+        type: string
+    type: object
   v1alpha1.AWSChaosSpec:
     properties:
       action:
@@ -3343,6 +3363,9 @@ definitions:
     properties:
       awsChaos:
         $ref: '#/definitions/v1alpha1.AWSChaosSpec'
+        description: +optional
+      awsazChaos:
+        $ref: '#/definitions/v1alpha1.AWSAzChaosSpec'
         description: +optional
       azureChaos:
         $ref: '#/definitions/v1alpha1.AzureChaosSpec'
@@ -5659,6 +5682,9 @@ definitions:
       awsChaos:
         $ref: '#/definitions/v1alpha1.AWSChaosSpec'
         description: +optional
+      awsazChaos:
+        $ref: '#/definitions/v1alpha1.AWSAzChaosSpec'
+        description: +optional
       azureChaos:
         $ref: '#/definitions/v1alpha1.AzureChaosSpec'
         description: +optional
@@ -6004,6 +6030,9 @@ definitions:
         type: boolean
       awsChaos:
         $ref: '#/definitions/v1alpha1.AWSChaosSpec'
+        description: +optional
+      awsazChaos:
+        $ref: '#/definitions/v1alpha1.AWSAzChaosSpec'
         description: +optional
       azureChaos:
         $ref: '#/definitions/v1alpha1.AzureChaosSpec'
